Downloads/TCA-InfraForge/config/advanced/advanced-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: advanced-tools-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - temitayocharles.online
    secretName: temitayocharles-tls
  rules:
  # Jaeger
  - host: jaeger.temitayocharles.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tc-enterprise-jaeger-query
            port:
              number: 16686
  # ArgoCD
  - host: argocd.temitayocharles.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
